--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "studio": "cd sanity && npm run dev",
     "build": "next build",
+    "build-studio": "cd sanity && npm run build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@portabletext/react": "^3.1.0",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.62.0",
+    "lucide-react": "^0.453.0",
     "next": "14.2.16",
     "next-sanity": "^9.7.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sanity": "^3.62.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
