--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@portabletext/react": "^3.1.0",
     "@portabletext/types": "^2.0.13",
+    "@sanity/code-input": "^4.1.4",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.62.0",
     "lucide-react": "^0.453.0",
