--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/vision": "^3.62.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.16",
+    "next-mdx-remote": "^5.0.0",
     "next-sanity": "^9.7.1",
     "react": "^18",
     "react-dom": "^18",
