--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     },
     "target": "ES2017"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/books/[slug]/chapters/[chapterSlug]/page.js"],
   "exclude": ["node_modules"]
 }
